# practical_pytest

./: .gitignore  README.md  pyproject.toml
src/practical_pytest/: __init__.py  edge_finding.py  maths.py
tests/tests_integration/: test_edge_finding.py
tests/tests_unit/: test_maths.py
